--- a/KitabinBende.MvcWeb/Views/Shared/_Layout.cshtml
+++ b/KitabinBende.MvcWeb/Views/Shared/_Layout.cshtml
@@ -26,11 +26,12 @@
     <link rel="stylesheet" href="~/css/style.css">
     <!-- responsive css -->
     <link rel="stylesheet" href="~/css/responsive.css">
+    <link href="~/css/bootstrap-multiselect.css" rel="stylesheet" />
     <!-- modernizr css -->
     <script src="~/js/vendor/modernizr-2.8.3.min.js"></script>
 
 
-    
+
 
     <title>@ViewBag.Title</title>
 </head>
@@ -534,8 +535,11 @@
     <!-- footer-area-end -->
     <!-- all js here -->
     <!-- jquery latest version -->
-    <script src="~/js/vendor/jquery-1.12.0.min.js"></script>
+    @*<script src="~/js/vendor/jquery-1.12.0.min.js"></script>*@
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    @*<script src="~/js/vendor/jquery-3.4.1.min.js"></script>*@
     <!-- bootstrap js -->
+    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>*@
     <script src="~/js/bootstrap.min.js"></script>
     <!-- owl.carousel js -->
     <script src="~/js/owl.carousel.min.js"></script>
@@ -561,5 +565,9 @@
     <script src="~/js/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.0/jquery.validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
+
+    <script src="~/js/bootstrap-multiselect.js"></script>
+    @RenderSection("scripts", required: false)
+    
 </body>
 </html>
