--- a/KitabinBende.MvcWeb/Views/Home/Index.cshtml
+++ b/KitabinBende.MvcWeb/Views/Home/Index.cshtml
@@ -333,7 +333,7 @@
                                             £60.00
                                         </span>*@
                                     </p>
-                                    <a href="#" style="color:#666;">Nasıl kitap takas ederim ?????</a>
+                                    <a href="#" style="color:#666;">Nasıl kitap takas ederim ??</a>
                                 </div>
                             </div>
                         </div>
